--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/three": "^0.182.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-joystick-component": "^6.2.1",
     "three": "^0.182.0"
   },
   "devDependencies": {
